--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="yixjy8a8zFOoNUHEj5gggKfESZVRYlXpTYrH5pixFpI" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gaurav Travels - Best Taxi Service</title>
+<meta name="description" content="Book trusted taxi service for all your travel needs. Affordable, reliable and available 24/7.">
+<meta name="keywords" content="Taxi, Travel, Ujjain, Cab, Gaurav Travels">
+<link rel="canonical" href="https://gauravtravels.in/" />
 
-  <title>Gaurav Travels</title>
 
   <!--=====FAB ICON=======-->
   <link rel="shortcut icon" href="assets/img/logo/fav-logo3.png" type="image/x-icon">
@@ -210,6 +214,7 @@
               </div>
               <div class="header-heading2">
                 <a href="https://maps.app.goo.gl/xXGWZVStWtFFfPvm8">
+                  <h1 style="visibility: hidden;">Gouravtravels</h1>
                   <h5><i class="fa-solid fa-location-dot"></i>
                     Shop no.4 Hotel Arihant,<br>opposite Railway station Ujjain ,Madhya Pradesh</h5>
                 </a>
@@ -1383,6 +1388,8 @@
                           <span>+91 9685899199</span></a></li>
                       <li><a href="mailto:animeshj754@gmail.com"><span><i class="fa-solid fa-envelope"></i></span>
                           <span style=" text-transform: lowercase;;">animeshj754@gmail.com</span></a></li>
+                           <li><a href="https://www.justdial.com/Ujjain/Gaurav-Travels-Opposite-Railway-Station-Ujjain-HO/9999PX734-X734-130819230303-I6Q9DC_BZDET"><span><i class="fa-solid fa-arrow-right"></i></span>
+                          <span style=" text-transform: lowercase; target:_blank;"> For more Info</span></a></li>
 
                     </ul>
                   </div>
