--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,15 @@
   <script src="assets/js/plugins/ScrollTrigger.min.js"></script>
   <script src="assets/js/plugins/Splitetext.js"></script>
   <script src="assets/js/main.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17303561143"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17303561143');
+</script>
 </body>
 
 </html>
